Closed
Bug 1299757
Opened 9 years ago
Closed 9 years ago
Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_594877'
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla51
| Tracking | Status | |
|---|---|---|
| firefox51 | --- | fixed |
People
(Reporter: cleu, Assigned: cleu)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
3.86 KB,
patch
|
ethlin
:
review+
milan
:
review+
|
Details | Diff | Splinter Review |
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::WindowsVista, IntelGMA500, V(7,14,10,1006), "FEATURE_FAILURE_594877_1");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::WindowsVista, IntelGMA900, GfxDriverInfo::allDriverVersions, "FEATURE_FAILURE_594877_2");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::WindowsVista, IntelGMA950, V(7,14,10,1504), "FEATURE_FAILURE_594877_3");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::WindowsVista, IntelGMA3150, V(7,14,10,2124), "FEATURE_FAILURE_594877_4");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::WindowsVista, IntelGMAX3000, V(7,15,10,1666), "FEATURE_FAILURE_594877_5");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::WindowsVista, IntelHDGraphicsToSandyBridge, V(8,15,10,2202), "FEATURE_FAILURE_594877_6");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::Windows7, IntelGMA500, V(5,0,0,2026), "FEATURE_FAILURE_594877_7");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::Windows7, IntelGMA900, GfxDriverInfo::allDriverVersions, "FEATURE_FAILURE_594877_8");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::Windows7, IntelGMA950, V(8,15,10,1930), "FEATURE_FAILURE_594877_9");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::Windows7, IntelGMA3150, V(8,14,10,2117), "FEATURE_FAILURE_594877_10");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::Windows7, IntelGMAX3000, V(8,15,10,1930), "FEATURE_FAILURE_594877_11");
IMPLEMENT_INTEL_DRIVER_BLOCKLIST_D2D(OperatingSystem::Windows7, IntelHDGraphicsToSandyBridge, V(8,15,10,2202), "FEATURE_FAILURE_594877_12");
Per discussion in bug1294771, we should investigate what we are trying to block and see if we should use build id for this.
[1]https://dxr.mozilla.org/mozilla-central/source/widget/windows/GfxInfo.cpp#989
| Assignee | ||
Updated•9 years ago
|
| Assignee | ||
Comment 1•9 years ago
|
||
| Assignee | ||
Comment 2•9 years ago
|
||
Comment on attachment 8788085 [details] [diff] [review]
bug1299757 - Only use build id for Intel blocklist
The latest Vista driver for Intel Graphics is 2869 which is quite old comparing to current driver (4425), so I think we should not unify Windows7 and Windows Vista's condition to prevent over-block.
Attachment #8788085 -
Flags: review?(ethlin)
Updated•9 years ago
|
Attachment #8788085 -
Flags: review?(ethlin) → review+
| Assignee | ||
Updated•9 years ago
|
Attachment #8788085 -
Flags: review?(milan)
To understand better - are there Intel driver versions on Windows 7 that are not 8.x.x.x, and on Windows Vista that are not 7.x.x.x?
| Assignee | ||
Comment 4•9 years ago
|
||
(In reply to Milan Sreckovic [:milan] from comment #3)
> To understand better - are there Intel driver versions on Windows 7 that are
> not 8.x.x.x, and on Windows Vista that are not 7.x.x.x?
It's possible that somebody uses Windows Vista and updates to Windows 7 without graphics driver updated.
In that case, the user runs Windows 7, but the driver would stay in 7.x.x.x.
There are similar situation in Windows7, 8, 10, too.
So I think the first version number is not that accurate to describe users' Windows version.
Updated•9 years ago
|
Attachment #8788085 -
Flags: review?(milan) → review+
Anthony, let's keep an eye out on these graphics cards, and see if we get a change in crash frequency:
0x8108, 0x8109, 0x2582, 0x2782, 0x2592, 0x2792, 0x2772, 0x2776
0x27a2, 0x27a6, 0x27ae, 0xa00, 0xa00, 0xa01, 0xa012, 0x2972, 0x010a
0x2973, 0x2982, 0x2983, 0x2992, 0x2993, 0x29a2, 0x29a3, 0x29b
0x29b3, 0x29c2, 0x29c3, 0x29d2, 0x29d3, 0x2a02, 0x2a03, 0x2a12
0x2a13, 0x0042, 0x0102, 0x0106, 0x0112, 0x0116, 0x0122, 0x0126
Flags: needinfo?(anthony.s.hughes)
(In reply to Milan Sreckovic [:milan] from comment #5)
> Anthony, let's keep an eye out on these graphics cards
Due to the sheer number of device IDs it's not possible for me to track these individually. However I have set up a chart that will track Nightly crashes for these devices in aggregate.
http://ashughes1.github.io/metrics-graphics-gfx/#v2-bug-1299757
Flags: needinfo?(anthony.s.hughes)
Thanks - I should have been clearer - in the aggregate is perfect.
Michael, please this graph over the next couple of weeks and see whether we can see changes (good or bad) based on landing this.
Flags: needinfo?(cleu)
| Assignee | ||
Comment 9•9 years ago
|
||
OK, I will keep track of the crash rate after this bug landed.
| Assignee | ||
Comment 10•9 years ago
|
||
Here is tryserver result
https://treeherder.mozilla.org/#/jobs?repo=try&revision=ce52df760bff
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(cleu)
Keywords: checkin-needed
Comment 11•9 years ago
|
||
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/39135ac0e961
Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_594877'. r=ethlin, r=milan
Keywords: checkin-needed
Comment 12•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•