Bug 1299757 - Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_594877'. r=ethlin, r=milan